fixing some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -4,22 +4,22 @@
 
 @layer base {
   h1 {
-    @apply text-6xl sm:text-7xl;
-  }
-  h2 {
     @apply text-5xl sm:text-6xl;
   }
-  h3 {
+  h2 {
     @apply text-4xl sm:text-5xl;
   }
-  h4 {
+  h3 {
     @apply text-3xl sm:text-4xl;
   }
-  h5 {
+  h4 {
     @apply text-2xl sm:text-3xl;
   }
-  h6 {
+  h5 {
     @apply text-xl sm:text-2xl;
+  }
+  h6 {
+    @apply text-lg sm:text-xl;
   }
 }
 
@@ -28,6 +28,12 @@
     max-width: calc(25rem * 10);
     columns: 24rem auto;
     @apply mx-auto gap-4;
+  }
+  .absolute-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
